# replace project Name and pName 
project (Noxxx_leetcodeTitleName)
set(pName a)

cmake_minimum_required (VERSION 2.6)
add_compile_options(-std=c++11)
add_compile_options(-D_GLIBCXX_DEBUG)

set( SOLUTION_DIR  ${PROJECT_SOURCE_DIR}/include)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
MESSAGE(STATUS ${CMAKE_MODULE_PATH})

#ADD_SUBDIRECTORY(${SOLUTION_DIR} )
include_directories(/usr/local/include)
include_directories(${SOLUTION_DIR})
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
add_executable(${pName} ${DIR_SRCS})
#TARGET_LINK_LIBRARIES(${pName} Line)
FIND_PACKAGE(libgtest REQUIRED)
MARK_AS_ADVANCED(
    LIBGTEST_INCLUDE_DIR
    LIBGTEST_LIBRARIES
    )
IF (LIBGTEST_INCLUDE_DIR AND LIBGTEST_LIBRARIES)
    MESSAGE(STATUS "FOUND LIBGTEST" ${LIBGTEST_INCLUDE_DIR})
    INCLUDE_DIRECTORIES(${LIBGTEST_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(${pName} ${LIBGTEST_LIBRARIES} )
ENDIF (LIBGTEST_INCLUDE_DIR AND LIBGTEST_LIBRARIES)
MESSAGE(STATUS ${LIBGTEST_INCLUDE_DIR})


